# DjangoProject

./: .env.sample  .gitignore  data.json  pyproject.toml  readme.md
blogapp/: forms.py  models.py  services.py  urls.py  views.py
blogapp/migrations/: 0001_initial.py  0002_article_slug.py  0003_alter_article_slug.py
config/: settings.py  urls.py
dumpdata/: data_all_data.json  data_blogapp.json  data_mailing.json  data_users.json
mailapp/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailapp/migrations/: 0001_initial.py  0002_alter_mail_mailing_alter_mailinglog_log_text.py  0002_mailinglog_user_alter_mail_options_mail_name_mailing_and_more.py  0003_alter_user_options.py  0003_mail_comment_mail_is_active_and_more.py  0004_alter_mailinglog_log_text.py  0004_rename_mail_client_alter_mailinglog_log_text.py  0005_alter_mailinglog_log_text.py  0005_message_alter_mailinglog_log_text_mailinglog_message.py  0006_remove_mailinglog_message_alter_mailinglog_log_text.py  0007_alter_mailing_message_alter_mailinglog_log_text.py  0008_mailing_message_in_alter_mailinglog_log_text.py  0009_alter_mailing_message_alter_mailinglog_log_text.py  0010_mailingsettings_alter_mailinglog_log_text_and_more.py  0011_mailinglog_mail_answer_mailinglog_status_and_more.py  0012_alter_mailinglog_log_text_and_more.py  0013_alter_mailinglog_log_text_and_more.py  0014_alter_mailing_datetime_send_and_more.py  0015_alter_mailing_datetime_send_and_more.py  0016_remove_mailing_datetime_send_remove_mailing_status_and_more.py  (+17 more)
users/: forms.py  models.py  urls.py  views.py
(+53 files in other folders)
