[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Эдуард Кусков <shadowfish@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2 = "^2.9.9"
python-decouple = "^3.8"
black = "^24.4.2"
pytz = "^2024.1"
django-crontab = "^0.7.1"
python-crontab = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
